5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1637_1053.log
== TEST (2019-04-09 10:21:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
magic = ("qual o patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono == "cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:21:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
patrono= input("qual o patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:21:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu códig
patrono= input("qual o patrono: ")
if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.186059
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
